# graduationPaper

./: .gitignore  test_new_inventory.py  提问.md
opt-cold-rolling/: .env  INVENTORY_CONSTRAINED_STRATEGY.md  QWEN.md  check_columns.py  check_db.py  compare_strategies.py  order_data.db  pyproject.toml  requirements.txt  test_db_connection.py  test_fixed_scheduler.py  test_full_nsga2_with_gantt.py  test_gantt_chart.py  test_inventory_constrained_strategy.py  test_new_inventory.py  test_new_inventory_method.py  test_nsga2_new_inventory.py  test_restructured_gantt.py  test_save_function.py  test_schedule_simulation.py  test_solver_functionality.py  verify_inventory_constraints.py
opt-cold-rolling/algorithm/job_plan/: data_generate_CA.ipynb  local_search.ipynb
opt-cold-rolling/algorithm/multiple_objective/: NSGA2.ipynb  cal_time_windows.py  database.py  database_util.py  db_query_util.py  main.py  nsga2_solver.py  visualization.py  问题说明.md
opt-cold-rolling/algorithm/multiple_objective/plot_charts/: plot_gant_charts.py  plot_inventory_changes.py  plot_tardiness_charts.py
opt-cold-rolling/algorithm/multiple_objective/table/: order_data.xlsx  order_new.py  order_new.xlsx  schedule_result.py  (+1 more)
opt-cold-rolling/algorithm/order_plan/: data_generate.ipynb  order_plan_parameter.py
opt-cold-rolling/algorithm/single_objective/: pso_scheduler.py
opt-cold-rolling/data/: 合同计划.xls  连退作业计划数据.xls
opt-cold-rolling/sql/: cold_rolling.db  database.py  import_data.py  import_order_data.py
opt-cold-rolling/table/: TJCAUSP.py  TJCAUSP_ORIGIN.py  TOCAUSP.py  order.py  order_new.py
(+117 files in other folders)
